Fix shrinking navigation and wrapping

--- a/src/runtime/assets/tailwind.css
+++ b/src/runtime/assets/tailwind.css
@@ -244,9 +244,6 @@
 .ducktory\:min-h-screen {
   min-height: 100vh;
 }
-.ducktory\:w-1\/3 {
-  width: calc(1/3 * 100%);
-}
 .ducktory\:w-6 {
   width: calc(var(--ducktory-spacing) * 6);
 }
@@ -265,17 +262,20 @@
 .ducktory\:max-w-6xl {
   max-width: var(--ducktory-container-6xl);
 }
-.ducktory\:max-w-72 {
-  max-width: calc(var(--ducktory-spacing) * 72);
-}
 .ducktory\:max-w-\[80vw\] {
   max-width: 80vw;
+}
+.ducktory\:min-w-0 {
+  min-width: calc(var(--ducktory-spacing) * 0);
 }
 .ducktory\:min-w-full {
   min-width: 100%;
 }
 .ducktory\:flex-1 {
   flex: 1;
+}
+.ducktory\:shrink-0 {
+  flex-shrink: 0;
 }
 .ducktory\:cursor-pointer {
   cursor: pointer;
@@ -316,6 +316,9 @@
 }
 .ducktory\:overflow-scroll {
   overflow: scroll;
+}
+.ducktory\:overflow-x-hidden {
+  overflow-x: hidden;
 }
 .ducktory\:overflow-y-auto {
   overflow-y: auto;
